[ROLES] Add advanced rules for roles, based on 42 api /me api call. (Frontend done, still need to save the config, and apply it on new connections)
